# asPEEK

./: CmakeLists.txt  License.txt  README.md  README.txt
client/: settings.js
demo/scripts/: file1.as  file2.as  file4.as  file5.as  file6.as  file7.as
example/: CMakeLists.txt
example/scripts/: file1.as  file3.as  not_debugged.as
example/src/: main.cpp
include/: asPEEK.h
include/websocketpp/: common.hpp  network_utilities.hpp
src/: asPEEK.cpp
